--- a/appodata/webapp/view/Products.view.xml
+++ b/appodata/webapp/view/Products.view.xml
@@ -1,4 +1,4 @@
-<mvc:View controllerName="com.sap.appodata.controller.View1"
+<mvc:View controllerName="com.sap.appodata.controller.Products"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
     <Page id="page" title="{i18n>title}">
