--- a/appodata/webapp/view/Products.view.xml
+++ b/appodata/webapp/view/Products.view.xml
@@ -1,6 +1,11 @@
 <mvc:View controllerName="com.sap.appodata.controller.Products"
     xmlns:mvc="sap.ui.core.mvc"
     xmlns="sap.m">
-    <Page id="page" title="{i18n>title}">
+    <Page id="Products" title="Available Products">
+        <content>
+            <List items="{/Products}">
+                <StandardListItem type="Active" title="{ProductName}" />
+            </List>
+        </content>
     </Page>
 </mvc:View>
